[build-system]
build-backend = "uv_build"
requires = ["uv-build>=0.8,<0.9"]

[project]
name = "pywttr-models"
version = "2.0.1"
description = "Internal library for pywttr and aiopywttr"
readme = "README.md"
keywords = ["forecast", "weather"]
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.9"
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2", "typing-extensions>=4.4"]
urls.repository = "https://github.com/monosans/pywttr-models"

[dependency-groups]
dev = ["mypy[faster-cache]==1.18.2", "ruff==0.13.3"]
