[project]
name = "pywttr-models"
description = "Internal library for pywttr and aiopywttr"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
keywords = ["forecast", "weather"]
classifiers = [
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
urls.repository = "https://github.com/monosans/pywttr-models"
dependencies = ["pydantic>=2", "typing-extensions>=4.4"]
dynamic = ["version"]

[dependency-groups]
dev = ["mypy[faster-cache]==1.19.1", "ruff==0.15.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.version]
path = "src/pywttr_models/__init__.py"
